tests/parser/bad/exps/exp_t-spid-cid-period-with.scilexp
let id = fun(x : (Option Bool)) => x in
id False.Thing (* False.Thing should be more like False.thing *)
